# MMBC_test_task

./: Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
api/: models.py  serializers.py  signals.py  tasks.py  urls.py  validators.py  views.py
video_crop/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
