[tool.poetry]
name = "video_crop"
version = "0.1.0"
description = ""
authors = ["None"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0.2"
redis = "^5.0.1"
celery = "^5.3.6"
django-environ = "^0.11.2"
ffmpeg-python = "^0.2.0"
djangorestframework = "^3.14.0"
drf-yasg = "^1.21.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
